# QAdventure

./: .mergify.yml  MANIFEST.in  README.md  dev-requirements.txt  pyproject.toml  setup.py  tox.ini
.github/workflows/: python-app.yml
qadventure/: __init__.py  main.py  qadventure.py
qadventure/domain/: __init__.py  game_scenario.py  game_scene.py  game_state.py  scene_option.py
qadventure/game_managers/: __init__.py  basic_game_manager.py  game_manager.py
qadventure/requests/: __init__.py  change_scene_request.py  init_game_request.py  load_game_request.py  load_scenario_request.py  request.py  save_game_request.py
qadventure/responses/: __init__.py  response.py  response_failure.py  response_success.py
qadventure/save_managers/: __init__.py  json_save_manager.py  save_manager.py
qadventure/scenario_managers/: __init__.py  json_scenario_manager.py  scenario_manager.py
qadventure/use_cases/: __init__.py  change_scene_use_case.py  init_game_use_case.py  load_game_use_case.py  load_scenario_use_case.py  save_game_use_case.py
scenarios/QAdventure tutorial/: qadventure_tutorial.json
scenarios/QAdventure tutorial/sources/: QAdventure_tutorial.xcf
tests/: test_main.py  test_qadventure.py
tests/domain/: test_game_scenario.py  test_game_scene.py  test_game_state.py  test_scene_option.py
tests/game_managers/: test_basic_game_manager.py  test_game_manager.py
tests/requests/: test_change_scene_request.py  test_init_game_request.py  test_load_game_request.py  test_load_scenario_request.py  test_request.py  test_save_game_request.py
tests/responses/: test_response.py  test_response_failure.py  test_response_success.py
tests/save_managers/: test_json_save_manager.py  test_save_manager.py
tests/scenario_managers/: test_json_scenario_manager.py  test_scenario_manager.py
tests/use_cases/: test_change_scene_use_case.py  test_init_game_use_case.py  test_load_game_use_case.py  test_load_scenario_use_case.py  test_save_game_use_case.py
