[tool.poetry]
name = "qadventure"
version = "0.1.0"
description = "Engine for text adventures written in Python and PyQt library"
authors = ["Michal Konečný <mkonecny@redhat.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Zlopez/QAdventure"
homepage = "https://github.com/Zlopez/QAdventure"
documentation = "https://github.com/Zlopez/Qadventure/-/blob/main/README.md"
classifiers = [
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.8"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
bandit = "1.7.4"
black = "22.10.0"
coverage = "6.5.0"
diff-cover = "7.0.2"
flake8 = "5.0.4"
mock = "4.0.3"
pytest = "7.2.0"
pytest-cov = "4.0.0"
pytest-qt = "4.2.0"
pytest-xvfb = "2.0.0"

# Mypy test requirements
mypy = "0.991"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
