[tool.poetry]
name = "qadventure"
version = "0.1.0"
description = "Engine for text adventures written in Python and PyQt library"
authors = ["Michal Konečný <mkonecny@redhat.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Zlopez/QAdventure"
homepage = "https://github.com/Zlopez/QAdventure"
documentation = "https://github.com/Zlopez/Qadventure/-/blob/main/README.md"
classifiers = [
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.8.1"
PyQt5 = "^5.15.9"

[tool.poetry.dev-dependencies]
bandit = "1.7.5"
black = "23.7.0"
coverage = "7.3.0"
diff-cover = "7.7.0"
flake8 = "6.1.0"
mock = "5.1.0"
pytest = "7.4.0"
pytest-cov = "4.1.0"
pytest-qt = "4.2.0"
pytest-xvfb = "3.0.0"

# Mypy test requirements
mypy = "1.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
